Cultibox (1.1.17) precise; urgency=low
    + Correction du calendrier: les evènements sur deux mois fonctionnent à nouveau
    + Les accents dans les fichiers calc sont maintenant bien pris en compte

-- Yann Genevois <yann.genevois@gmail.com> Mon Apr 29 21:45:39 CEST 2013


Cultibox (1.1.16) precise; urgency=low
    + Correction du calendrier pour windows: on ne regarde pas les repertoire . et .. pour la recherche de fichiers xml 

-- Yann Genevois <yann.genevois@gmail.com> Mon Apr 29 16:42:25 CEST 2013


Cultibox (1.1.15) precise; urgency=low
    + Ajout des fichiers de langues pour la datepicker
    + Modificaition de localhost en 127.0.0.1 dans le fichier configuration.php de joomla

-- Yann Genevois <yann.genevois@gmail.com> Mon Apr 29 14:32:31 CEST 2013


Cultibox (1.1.14) precise; urgency=low
    + Correction de la connxion PDO: passage de localhost à 127.0.0.1 (problème de timeout due au reverse DNS IPV6)
    + Correction des cases avec plusieurs valeurs qui ne marchaient pas
    + Déplacement du boutton "resetzoom" des logs au centre en bas du graphe
    + Création des index sur le timestamp pour les tables des logs et power
    + Correction d'un bug d'affichage des radios boutons dans les logs
    + Modifications des scripts php du calendrier: les evènements sont directements écrits sur la carte sd et l'ont ne modifie plus que la plage de dates de lévènement pour optimiser
    + Suppression du fichier json-refresh.php puisque chaque script gère indépendamenet sa partie d'écriture sur la carte SD
    + Optimisation de la recherche de la carte SD: on oublie les repertoire . et ..
    + Debug des commandes mysql: sous windows Vista, les commandes mysql utilisant localhost pour créer une connexion plantent, on passe à l'adresse 127.0.0.1

-- Yann Genevois <yann.genevois@gmail.com> Fri Apr 26 11:02:38 CEST 2013


Cultibox (1.1.13) precise; urgency=low
    + Non rechargement de la page des programmes, passage a jquery 1.9, relooking css...